--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^5.0.3",
     "@angular/animations": "~10.1.3",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
     "@angular/localize": "~10.1.3",
+    "@angular/material": "^10.2.7",
+    "@angular/material-moment-adapter": "^11.0.3",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
@@ -24,20 +28,47 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@igniteui/material-icons-extended": "^2.4.0",
+    "@material-extended/mde": "^3.0.3",
+    "@material-ui/pickers": "^3.2.10",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@progress/kendo-angular-common": "^1.0.0",
+    "@progress/kendo-angular-dateinputs": "^4.4.1",
+    "@progress/kendo-angular-intl": "^2.0.0",
+    "@progress/kendo-angular-l10n": "^2.0.0",
+    "@progress/kendo-angular-popup": "^3.0.0",
+    "@progress/kendo-theme-bootstrap": "^4.26.0",
+    "@progress/kendo-theme-default": "latest",
+    "@progress/kendo-theme-material": "^3.24.0",
     "bootstrap": "^4.5.3",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^10.2.12",
+    "igniteui-cli": "^7.0.2",
     "jquery": "^3.5.1",
+    "jszip": "^3.5.0",
+    "md-pickers": "^1.1.5",
+    "mdb-ui-kit": "^3.1.0",
+    "minireset.css": "~0.0.4",
+    "moment": "^2.29.1",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-duration-input": "0.0.3",
+    "ngx-file-drag-drop": "^5.1.1",
+    "ngx-material-timepicker": "^5.5.3",
+    "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular-devkit/build-angular": "^0.1100.3",
     "@angular/cli": "~10.1.3",
     "@angular/compiler-cli": "~10.1.3",
-    "@types/node": "^12.11.1",
+    "@igniteui/angular-schematics": "~10.2.620",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
