--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular-material-components/datetime-picker": "^5.0.3",
+    "@angular-mdc/web": "^5.1.1",
     "@angular/animations": "~10.1.3",
     "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.3",
@@ -24,14 +25,16 @@
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@auth0/angular-jwt": "^5.0.2",
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@igniteui/material-icons-extended": "^2.4.0",
-    "@material-extended/mde": "^3.0.3",
     "@material-ui/pickers": "^3.2.10",
+    "@material/select": "^10.0.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@popperjs/core": "^2.6.0",
     "@progress/kendo-angular-common": "^1.0.0",
     "@progress/kendo-angular-dateinputs": "^4.4.1",
     "@progress/kendo-angular-intl": "^2.0.0",
@@ -50,6 +53,7 @@
     "mdb-ui-kit": "^3.1.0",
     "minireset.css": "~0.0.4",
     "moment": "^2.29.1",
+    "ng2-cookies": "^1.0.12",
     "ngx-bootstrap": "^6.2.0",
     "ngx-duration-input": "0.0.3",
     "ngx-file-drag-drop": "^5.1.1",
