--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@progress/kendo-theme-bootstrap": "^4.26.0",
     "@progress/kendo-theme-default": "latest",
     "@progress/kendo-theme-material": "^3.24.0",
+    "angular-weblineindia-image-crop-upload": "^1.0.1",
     "bootstrap": "^4.5.3",
+    "cropperjs": "^1.5.10",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^10.2.12",
     "igniteui-cli": "^7.0.2",
@@ -54,9 +56,12 @@
     "minireset.css": "~0.0.4",
     "moment": "^2.29.1",
     "ng2-cookies": "^1.0.12",
+    "ngx-awesome-uploader": "^10.0.4",
     "ngx-bootstrap": "^6.2.0",
     "ngx-duration-input": "0.0.3",
     "ngx-file-drag-drop": "^5.1.1",
+    "ngx-image-cropper": "^3.3.4",
+    "ngx-material-file-input": "^2.1.1",
     "ngx-material-timepicker": "^5.5.3",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
